--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Vite + React + TS</title>
   </head>
